Update azure-pipelines-1.yml for Azure Pipelines

--- a/MyStayApplication/azure-pipelines-1.yml
+++ b/MyStayApplication/azure-pipelines-1.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: Maven@3
   inputs:
-    mavenPomFile: 'pom.xml'
+    mavenPomFile: 'https://github.com/Laharivegiraju22/mvc/tree/master/MyStayApplication/pom.xml'
     mavenOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
